--- a/UTShuttleSwift/Base.lproj/Main.storyboard
+++ b/UTShuttleSwift/Base.lproj/Main.storyboard
@@ -1151,7 +1151,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uDB-js-EK6">
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="100" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uDB-js-EK6">
                                                     <rect key="frame" x="8" y="12" width="20" height="20"/>
                                                     <color key="backgroundColor" red="0.58823529411764708" green="0.58823529411764708" blue="0.58823529411764708" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
@@ -1165,7 +1165,7 @@
                                                         <userDefinedRuntimeAttribute type="boolean" keyPath="makeCircle" value="YES"/>
                                                     </userDefinedRuntimeAttributes>
                                                 </label>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZU3-5S-sA0">
+                                                <button opaque="NO" tag="104" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZU3-5S-sA0">
                                                     <rect key="frame" x="332" y="5" width="35" height="35"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="ZU3-5S-sA0" secondAttribute="height" multiplier="1:1" id="SrD-5f-lwH"/>
@@ -1173,29 +1173,29 @@
                                                     </constraints>
                                                     <state key="normal" image="iconDelete"/>
                                                 </button>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="253" verticalHuggingPriority="251" horizontalCompressionResistancePriority="753" text="10:20 am" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4il-PZ-FBV">
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="103" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="10:20 am" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4il-PZ-FBV">
                                                     <rect key="frame" x="260.5" y="0.0" width="63.5" height="44"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fxg-9m-kOQ">
-                                                    <rect key="frame" x="36" y="0.0" width="226.5" height="44"/>
+                                                    <rect key="frame" x="36" y="0.0" width="216.5" height="44"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="South Street " textAlignment="center" lineBreakMode="middleTruncation" numberOfLines="0" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="j7m-C8-kCb">
-                                                            <rect key="frame" x="0.0" y="5" width="109" height="34"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" tag="101" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="South Street " textAlignment="center" lineBreakMode="middleTruncation" numberOfLines="0" minimumScaleFactor="0.80000000000000004" translatesAutoresizingMaskIntoConstraints="NO" id="j7m-C8-kCb">
+                                                            <rect key="frame" x="0.0" y="5" width="103.5" height="34"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Term B" textAlignment="center" lineBreakMode="middleTruncation" numberOfLines="0" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="6rw-JP-J8c">
-                                                            <rect key="frame" x="118.5" y="5" width="108" height="34"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" tag="102" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Term B" textAlignment="center" lineBreakMode="middleTruncation" numberOfLines="0" minimumScaleFactor="0.80000000000000004" translatesAutoresizingMaskIntoConstraints="NO" id="6rw-JP-J8c">
+                                                            <rect key="frame" x="113.5" y="5" width="103" height="34"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="center" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O82-rB-KD7">
-                                                            <rect key="frame" x="110" y="0.0" width="7" height="44"/>
+                                                            <rect key="frame" x="105" y="0.0" width="7" height="44"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                                             <nil key="highlightedColor"/>
@@ -1235,7 +1235,7 @@
                                                 <constraint firstAttribute="bottom" secondItem="Fxg-9m-kOQ" secondAttribute="bottom" id="WAX-vi-oou"/>
                                                 <constraint firstItem="uDB-js-EK6" firstAttribute="leading" secondItem="nq8-ch-0K9" secondAttribute="leadingMargin" id="Xsx-yq-hUP"/>
                                                 <constraint firstItem="ZU3-5S-sA0" firstAttribute="leading" secondItem="4il-PZ-FBV" secondAttribute="trailing" constant="8" id="aY9-hI-vCL"/>
-                                                <constraint firstItem="Fxg-9m-kOQ" firstAttribute="trailing" secondItem="4il-PZ-FBV" secondAttribute="leading" constant="2" id="nHp-PY-d6o"/>
+                                                <constraint firstItem="Fxg-9m-kOQ" firstAttribute="trailing" secondItem="4il-PZ-FBV" secondAttribute="leading" constant="-8" id="nHp-PY-d6o"/>
                                                 <constraint firstItem="Fxg-9m-kOQ" firstAttribute="top" secondItem="nq8-ch-0K9" secondAttribute="top" id="oeL-ud-8Lc"/>
                                                 <constraint firstItem="uDB-js-EK6" firstAttribute="centerY" secondItem="nq8-ch-0K9" secondAttribute="centerY" id="pXZ-vT-cg0"/>
                                                 <constraint firstItem="ZU3-5S-sA0" firstAttribute="trailing" secondItem="nq8-ch-0K9" secondAttribute="trailingMargin" id="piR-Cg-qQc"/>
@@ -1575,13 +1575,14 @@
                     </view>
                     <connections>
                         <outlet property="availableJobsTableView" destination="Sak-7d-KfG" id="zNR-fz-6te"/>
+                        <outlet property="datelabel" destination="Udh-d5-9jb" id="aLB-cl-y2p"/>
                         <outlet property="myJobsTVHeight" destination="xVK-dh-hK8" id="b7v-gJ-Co4"/>
                         <outlet property="myJobsTableView" destination="yCs-V1-Icy" id="2sh-OE-CWI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gVm-Vk-hqP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1460" y="761"/>
+            <point key="canvasLocation" x="1460" y="760.56971514242889"/>
         </scene>
         <!--Current Job View Controller-->
         <scene sceneID="MzX-va-gQn">
